2007-07-08  Don Allingham  <don@gramps-project.org>
	* src/DbManager.py: handle drag-n-drop files in DbManager. Dragging an
	XML or GEDCOM file into the DbManager will create a new database and import
	the file.

2007-07-08  Brian Matherly <brian@gramps-project.org>
            Robert Cawley <rjc@cawley.id.au>
	* src/docgen/ODFDoc.py
	(write_note): Fix display of preformatted notes (#0001109)

2007-07-08  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsDBDir.py (write_lock_file): Work around
	os.getlogin() problem on some terminals.

2007-07-07  Don Allingham  <don@gramps-project.org>
	* src/PageView.py (ListView.column_clicked): set the search column for list
	views to be the sort column
	* src/DataViews/_EventView.py: add docs
	* src/DataViews/_FamilyList.py: add docs
	* src/DataViews/_NoteView.py: remove unused double_click
	* src/GrampsDb/_GrampsDbBase.py: fix __ on functions
	* src/ColumnOrder.py: fix __ on functions

2007-07-07  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/Editors/_EditNote.py: Follow hyperlinks (updated).

2007-07-06  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/Editors/_EditNote.py: Following hyperlinks (not complete).
	* src/MarkupText.py (class MarkupBuffer): Pattern matching feature.

2007-07-05  Alex Roitman  <shura@gramps-project.org>
	* configure.in: Require pygtk 2.10.0 or higher.
	* src/GrampsDbUtils/_WriteGedcom.py
	(GedcomWriter.write_long_text): Remove definition;
	(GedcomWriter.__init__): Define write_long_text based on self.conc.

2007-07-05  Robert Cawley  <rjc@cawley.id.au>
	* src/GrampsDbUtils/_WriteGedcom.py: Properly write notes, not
	their handles.

2007-07-03  Alex Roitman  <shura@gramps-project.org>
	* example/gramps/example.gramps: Update example to conform to
	the new XML version.

2007-07-03  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
	* src/Editors/_EditNote.py: "Unicode control character" menu removed.
	* src/MarkupText.py (class GtkSpellState): added;